--- a/translations/messages.ua.yaml
+++ b/translations/messages.ua.yaml
@@ -41,3 +41,10 @@ User Homepage: Домашня сторінка
 User Ip: ІР адреса
 User Browser: Браузер
 User Review: Відгук
+
+Archive: Архів
+Picture: Зоображення
+Action: Дії
+Welcome to your feedback archive: Ласкаво просимо до вашого архіву відгуків
+Manage your reviews here: Керуйте власними відгуками тут
+
