--- a/translations/messages.ua.yaml
+++ b/translations/messages.ua.yaml
@@ -47,4 +47,8 @@ Picture: Зоображення
 Action: Дії
 Welcome to your feedback archive: Ласкаво просимо до вашого архіву відгуків
 Manage your reviews here: Керуйте власними відгуками тут
+Choose picture: Виберіть картинку
+Edit: Виправити
+Are you sure you want to delete it: Ви впевнені що хочете видалити цей відгук?
+Delete: Видалити
 
